--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game 1</title>
+    <title>Game ef</title>
 </head>
 <body>
     <canvas id="myCanvas" width="500" height="500"></canvas>
