--- a/index.html
+++ b/index.html
@@ -2,14 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="5">
     <title>Canvas Game</title>
-    <style>
-        canvas {
-            border: 1px solid black;
-            display: block;
-            margin: 0 auto;
-        }
-    </style>
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
