--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="5">
     <title>Canvas Game</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3950428230835389"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
